# 
# LICENSE 
# This source file is subject to the GPL license that is bundled with  
# this package in the file LICENSE.TXT. 
# 
# Further details on the project are available at : 
#     http://www.postfixadmin.com or http://postfixadmin.sf.net 
#
# Last update:
# $Id$

Changes since 2.3.6 release
----------------------------------------------------------------
  - lt.lang translation update

Version 2.3.6 - 2013/01/02 - SVN r1417 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - display domain and mailbox description with correct encoding
  - fix footer link
  - focus username input field in login form
  - fix double inclusion of config.inc.php in setup.php
  - fix bool and date handling in fetchmail

Version 2.3.5 - 2012/01/16 - SVN r1335 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - fix SQL injection in pacrypt() (if $CONF[encrypt] == 'mysql_encrypt')
  - fix SQL injection in backup.php - the dump was not mysql_escape()d, 
    therefore users could inject SQL (for example in the vacation message)
    which will be executed when restoring the database dump.
    WARNING: database dumps created with backup.php from 2.3.4 or older might
             contain malicious SQL. Double-check before using them!
  - fix XSS with $_GET[domain] in templates/menu.php and edit-vacation
  - fix XSS in some create-domain input fields
  - fix XSS in create-alias and edit-alias error message
  - fix XSS (by values stored in the database) in fetchmail list view,
    list-domain and list-virtual
  - create-domain: fix SQL injection (only exploitable by superadmins)
  - add missing $LANG['pAdminDelete_admin_error']
  - don't mark mailbox targets with recipient delimiter as "forward only"
  - wrap hex2bin with function_exists() - PHP 5.3.8 has it as native function

Version 2.3.4 - 2011/09/16 - SVN r1180 (postfixadmin-2.3 branch)